crates/xlate/tests/snapshots/golden_matrix__stream_include_usage__gpt-4o-mini__20260910__chat_to_responses__gpt4o.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-4o",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Count one to five."
        }
      ]
    }
  ],
  "max_output_tokens": 128,
  "stream": true
}
--- headers ---
content-type: application/json
upstream_streams: true
--- degraded ---
